Fixed line gaps

--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ background-size: cover;height: 300%;background-position: bottom;}
 }
 .drop{padding-top:70px}
 .scorecard{
-  background:#FFFFFF;
+  background:#DDDDDD;
   border:3px solid black;
 
   position:absolute;
